[gd_scene load_steps=5 format=3 uid="uid://cjyrwp7xgijvk"]

[ext_resource type="Script" path="res://scenes/item/ability/lapidation/lapidation_projectile.gd" id="1_nchk6"]
[ext_resource type="Texture2D" uid="uid://ckyftvk7stajr" path="res://tress/at_ability_lapidation.tres" id="2_i4s6m"]
[ext_resource type="Script" path="res://scenes/utility/hit_box.gd" id="3_1kp21"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4110k"]

[node name="LapidationProjectile" type="Node2D"]
scale = Vector2(0.2, 0.2)
script = ExtResource("1_nchk6")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_i4s6m")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 129
script = ExtResource("3_1kp21")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_4110k")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
